--- a/src/styles/Layout/index.scss
+++ b/src/styles/Layout/index.scss
@@ -1,4 +1,18 @@
 .full-height {
-  height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
+}
+
+.outline-none {
+  box-shadow: none !important;
+  outline:0;
+}
+
+.lang-position {
+  right:5rem;
+  top:2rem;
+  color: #000000;
+}
+
+.cursor-pointer {
+  cursor:pointer;
 }
