--- a/src/styles/Layout/index.scss
+++ b/src/styles/Layout/index.scss
@@ -28,3 +28,10 @@ $headerHeight: 72px;
 button:focus {
   box-shadow: none !important;
 }
+
+.fake-invalid-feedback{
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 80%;
+  color: $colorRed;
+}
